# umamusume-web-crawler

./: .env.example  .gitignore  LICENSE  README.md  character_name_overrides.json  main.py  mcpserver.py  pyproject.toml  pytest.ini  umamusume_characters.json
.github/workflows/: backend-ci.yml
result/: EndDay.md  Tachyon.md
skills/umamusume-wiki-crawler/: skill.md
skills/umamusume-wiki-crawler/scripts/: crawl.py
src/umamusume_web_crawler/: __init__.py  cli.py  config.py
src/umamusume_web_crawler/mcp/: __init__.py  server.py
src/umamusume_web_crawler/web/: __init__.py  biligame.py  biligame_assets.py  character_index.py  crawler.py  moegirl.py  parse_wiki_infobox.py  process.py  search.py  smart_split.py  umamusu_wiki.py
tests/: test_biligame_assets.py  test_biligame_crawler.py  test_character_index.py  test_cli_config.py  test_crawler.py  test_google.py  test_mcp_config.py  test_mcp_tool_crawler.py  test_mcp_tool_crawler_biligame.py  test_mcp_tool_crawler_moegirl.py  test_mcp_tool_google.py  test_moegirl_crawler.py  test_search_title.py  test_umamusu_wiki.py  test_visual_capture_pdf.py
